# issue-agent

./: GEMINI.md  Makefile  README.md  mission.usv  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.ta/: worker
docs/: README.md
docs/architecture/: README.md
docs/chats/: gemini-conversation-1773283034591.json  project-init-to-v0.1.46.md
docs/cli/: README.md
docs/development/: README.md
docs/issues/: README.md  mission.usv
docs/issues/completed/2026/: migrate-docsissues-to-docstasks.md  nest-dependent-tasks-under-their-parent-in-list-view.md  update-development-standards-to-use-ta-done.md
docs/issues/draft/: test-plan.md
docs/issues/pending/: Create plugin sidecar strategy.md  add-triage-cli-sorting.md  add-view-and-edit-features-to-triage.md  make-nvim-the-default-editor.md  make-sure-x1e-is-not-used-as-a-record-separator-anywhere.md  new-task.md  remove-from-usv-writer-end-of-line.md  task-agent-should-not-create-read-only-access-on-each-task-markdown.md  test-issue.md
docs/tasks/: mission.usv
docs/workflow/: README.md
sidecars/adk-worker/: .env.example  pyproject.toml  worker.py
src/issue_agent/: cli.py
src/taskagent/: __init__.py  cli.py  discovery.py  manager.py  mcp.py
src/taskagent/models/: issue.py
tests/: test_cli.py  test_discovery.py  test_manager.py  test_manager_git.py  test_mcp.py
