[project]
name = "adk-worker"
version = "0.1.0"
description = "Reference ADK-based sidecar worker for task-agent"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.26.0",
    "google-genai>=1.66.0",
    "python-dotenv>=1.2.2",
    "onepassword-sdk>=0.4.0",
    "rich>=13.9.4",
]

[project.scripts]
worker = "worker:main"
